--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,69 +7,43 @@ description-meta: "Quarto Academic Website Template adapted by Dr. Gang He"
 author-meta: "Dr. Gang He"
 
 website:
-  title: "Quarto Academic"
-  image: "https://quarto.org/quarto.png"
-  description: "Quarto Academic Website Template adapted by Dr. Gang He"
+  title: "Ruitian Liu" 
+  description: "Statistics M.S. student at UC Davis" 
+  site-url: "https://rttliu.github.io"
+  repo-url: "https://github.com/rttliu/rttliu.github.io"
  
-  navbar:
-    background: light  # You can change the background color here
-
-    left:   # You can comment out all navigation items here if you just like to keep the index page only
-#      - text: Home
-#        href: index.qmd
+ navbar:
+    background: light
+    left:
+      - text: Home
+        href: index.qmd
       - text: About
-        menu:
-          - text: News
-            href: posts.qmd#category=news
-          - text: Events
-            href: posts.qmd#category=event      
-          - text: Contact
-            href: contact.qmd             
-      - text: Research
-        menu:
-          - text: List of Publications
-            href: publications.qmd
-          - text: Selected Papers
-            href: posts.qmd#category=paper
-          - text: Grants
-            href: projects.qmd                                
-      - text: Teaching # Comment the Teaching part out to remove the Teaching page
-        href: teaching.qmd
-      - text: Outreach
-        menu:        
-        - text: Presentations
-          href: posts.qmd#category=presentation                   
-      - text: Group   # Comment the Group part out to remove the Group page
-        href: people.qmd
-
-    right: 
+        href: about.qmd
+      - text: Coursework
+        href: coursework.qmd
+      - text: Projects
+        href: projects.qmd
+      - text: Writing
+        href: posts.qmd
       - text: CV
-        href: files/nsf-biosketch.pdf
+        href: files/cv.pdf
+    right:
       - icon: github
-        href: https://github.com/drganghe/quarto-academic-website-template
+        href: https://github.com/rttliu
         target: _blank
-      - text: "{{< fa brands bluesky >}}"
-        href: https://bsky.app
-        target: _blank      
       - icon: rss
         href: posts.xml
         target: _blank
   
   page-navigation: true
   
-  page-footer: 
-    left: "[Your Name](http://www.github.com) &copy; <script>document.write(new Date().getFullYear())</script>" 
-    center: "Build on [Quarto Academic Website Template](https://github.com/drganghe/quarto-academic-website-template) adapted by [Dr. Gang He](http://drganghe.github.io)"
-    right:  
+  page-footer:
+    left: "Ruitian Liu &copy; <script>document.write(new Date().getFullYear())</script>"
+    center: "Built with Quarto"
+    right:
       - icon: github
-        href: https://github.com/drganghe/quarto-academic-website-template
+        href: https://github.com/rttliu
         target: _blank
-      - text: "{{< fa brands bluesky >}}" 
-        href: https://bsky.app
-        target: _blank
-      - icon: rss
-        href: posts.xml
-        target: _blank  
   
   search:
     location: navbar
