--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,17 +2,16 @@ project:
   type: website
   output-dir: docs
 
-# Meta
-description-meta: "Quarto Academic Website Template adapted by Dr. Gang He"
-author-meta: "Dr. Gang He"
+description-meta: "Ruitian Liu - academic homepage"
+author-meta: "Ruitian Liu"
 
 website:
-  title: "Ruitian Liu" 
-  description: "Statistics M.S. student at UC Davis" 
+  title: "Ruitian Liu"
+  description: "Statistics M.S. student at UC Davis"
   site-url: "https://rttliu.github.io"
   repo-url: "https://github.com/rttliu/rttliu.github.io"
- 
- navbar:
+
+  navbar:
     background: light
     left:
       - text: Home
@@ -34,9 +33,9 @@ website:
       - icon: rss
         href: posts.xml
         target: _blank
-  
+
   page-navigation: true
-  
+
   page-footer:
     left: "Ruitian Liu &copy; <script>document.write(new Date().getFullYear())</script>"
     center: "Built with Quarto"
@@ -44,30 +43,15 @@ website:
       - icon: github
         href: https://github.com/rttliu
         target: _blank
-  
+
   search:
     location: navbar
     type: textbox
-  
+
   reader-mode: true
-
   draft-mode: unlinked
-  
-  repo-url: https://github.com/drganghe/quarto-academic-website-template
-#  repo-actions: [edit, issue, source]
-  
   open-graph: true
-  
-  twitter-card: true 
-#  card-style: summary      
-  
-  site-url: "https://drganghe.github.io/quarto-academic-website-template"
-  
-  google-analytics:
-    tracking-id: ""  # Please delete or replace with your own tracking ID
-    anonymize-ip: true 
-
-bibliography: references.bib  # Add references.bib to the root folder to enable the bibliography function
+  twitter-card: true
 
 format:
   html:
@@ -82,6 +66,6 @@ format:
     link-external-icon: false
     link-external-newwindow: true
     email-obfuscation: javascript
-    link-external-filter: '^(?:http:|https:)\/\/drganghe\.github\.io\/custom'
     include-in-header: "files/includes/_academic.qmd"
 
+bibliography: references.bib
