--- a/master.yml
+++ b/master.yml
@@ -12,7 +12,7 @@ Below is a record of graduate-level coursework in statistics and quantitative me
 
 ## 2025–2026 Academic Year
 
-### Fall 2025 (Overall GPA: 3.70
+### Fall 2025 (Overall GPA: 3.70)
 
 - **STA 200A — Introduction to Probability** (Required, Master level, Grade: A- )
   Fundamental concepts of probability theory, discrete and continuous random variables, standard distributions, moments and moment-generating functions, laws of large numbers and the central limit theorem.
